dev.thihup.jvisualg.examples/src/main/resources/dev/thihup/jvisualg/examples/errors/unsupported/stdfunctions.alg
algoritmo "erro dentro funcao padrao"

inicio

    escreval(randi(-1))

fimalgoritmo
